feat: Add initial repositories and services for product, promotion, and cart management, including category utilities and application configuration.